feat: add testing infrastructure and improve deployment workflow
- Convert static files to Jinja2 templates for variable substitution
- Add Molecule testing with OrbStack VM support
- Add Makefile with common commands (lint, test, deploy, auth)
- Add OAuth token flow with macOS Keychain extraction
- Make playbook idempotent with proper guards on shell tasks
- Add secrets scanning with gitleaks and pre-commit hooks
- Add local config override support (zzz_local.yml)
- Add documentation (ARCHITECTURE.md, CLAUDE.md, TESTING.md)
- Fix ansible_facts.env.HOME deprecation warning
- Add SSH host key checking configuration

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,16 @@
 .ansible_cache/
 *.retry
 
-# Secrets (vault.yml should be encrypted, but just in case)
+# Secrets - vault.yml should be encrypted but these catch mistakes
 # Do NOT add vault.yml here - we want to track the encrypted version
+*.vault_pass
+.vault_pass*
+*_secret*
+*.pem
+*.key
+
+# Local OAuth tokens for testing (copy your ~/.claude here)
+.tokens/
 
 # Python
 __pycache__/
@@ -24,3 +32,7 @@ Thumbs.db
 # Temp files
 *.tmp
 *.bak
+
+# Claude Code
+.claude/settings.local.json
+group_vars/all/zzz_local.yml
