--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = inventory/hosts.yml
-remote_user = pi
-private_key_file = ~/.ssh/id_ed25519_pi
+# User and SSH key are defined in inventory/hosts.yml via group_vars
+# host_key_checking disabled for convenience - enable in production if needed
 host_key_checking = False
 retry_files_enabled = False
 gathering = smart
