--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,5 +1,11 @@
+# Variables are defined in group_vars/all/vars.yml
+# Ansible loads group_vars before resolving these references
 all:
+  vars:
+    # Accept new host keys on first connect, reject if key changes (MITM protection)
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=accept-new'
   hosts:
     pi:
-      ansible_host: "{{ pi_tailscale_ip }}"
+      ansible_host: "{{ pi_host }}"
       ansible_user: "{{ pi_user }}"
+      ansible_ssh_private_key_file: "{{ pi_ssh_key }}"
