docs: improve documentation consistency and add CI pipeline
- Add GitHub Actions workflow for lint, secrets scan, syntax check
- Add .ansible-lint configuration for production profile
- Add handler verification script to lint process
- Standardize architecture diagrams across README, CLAUDE, ARCHITECTURE
- Fix port notation consistency (localhost:3100)
- Update tmux window examples to use realistic names
- Add token verification step to TESTING.md
- Fix macOS Keychain token copy description
- Add zzz_local.yml to Key Files documentation
- Update outdated tmux.conf documentation URL
- Add service restart verification tests to molecule

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,6 +17,9 @@ platforms:
 
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      vault_password_file: ${ANSIBLE_VAULT_PASSWORD_FILE:-}
   playbooks:
     create: create.yml
     converge: ../../playbook.yml
