--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -38,6 +38,47 @@
       changed_when: false
       failed_when: claude_tmux_active.stdout != 'active'
 
+    # =========================================================================
+    # GitHub MCP Service (conditional - only if vault_github_pat is set)
+    # =========================================================================
+    - name: Check if github-mcp service exists
+      ansible.builtin.command: systemctl --user list-unit-files github-mcp.service
+      register: github_mcp_exists
+      changed_when: false
+      failed_when: false
+
+    - name: Check github-mcp service is enabled
+      ansible.builtin.command: systemctl --user is-enabled github-mcp
+      register: github_mcp_enabled
+      changed_when: false
+      failed_when: github_mcp_enabled.stdout != 'enabled'
+      when: "'github-mcp.service' in github_mcp_exists.stdout"
+
+    - name: Check github-mcp service is running
+      ansible.builtin.command: systemctl --user is-active github-mcp
+      register: github_mcp_active
+      changed_when: false
+      failed_when: github_mcp_active.stdout != 'active'
+      when: "'github-mcp.service' in github_mcp_exists.stdout"
+
+    - name: Check github-mcp env file exists with secure permissions
+      ansible.builtin.stat:
+        path: ~/.config/github-mcp/env
+      register: github_mcp_env
+      failed_when: >-
+        github_mcp_env.stat.exists and
+        github_mcp_env.stat.mode != '0600'
+      when: "'github-mcp.service' in github_mcp_exists.stdout"
+
+    - name: Check github-mcp start script exists
+      ansible.builtin.stat:
+        path: ~/github-mcp/start.sh
+      register: github_mcp_script
+      failed_when: >-
+        'github-mcp.service' in github_mcp_exists.stdout and
+        not github_mcp_script.stat.exists
+      when: "'github-mcp.service' in github_mcp_exists.stdout"
+
     - name: Check tmux session exists
       ansible.builtin.command: tmux has-session -t main
       register: tmux_session
@@ -289,6 +330,7 @@
           === Optional Components ===
           Tailscale: {{ 'installed' if tailscale_check.rc == 0 else 'not installed' }}
           Claude Code on host: {{ 'installed' if claude_host.rc == 0 and claude_host.stdout != '' else 'not installed' }}
+          GitHub MCP: {{ 'configured' if github_mcp_exists.stdout is defined and 'github-mcp.service' in github_mcp_exists.stdout else 'not configured (no PAT)' }}
           Node.js version: {{ node_version.stdout | trim }}
           pnpm version: {{ pnpm_version.stdout | trim }}
 
